--- a/app/src/main/res/layout/main_include_fab.xml
+++ b/app/src/main/res/layout/main_include_fab.xml
@@ -9,5 +9,5 @@
     android:layout_marginEnd="@dimen/fab_margin"
     android:layout_marginBottom="16dp"
     android:text="@string/fab_text"
-    app:srcCompat="@android:drawable/ic_media_play"
+    app:icon="@android:drawable/ic_media_play"
     tools:showIn="@layout/activity_main" />
