--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,8 +6,41 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-    <include layout="@layout/main_include_instructions_bar"
-        android:id="@+id/instructions_bar_file" />
+    <!-- instructions bar -->
+    <include
+        android:id="@+id/instructions_bar_file"
+        layout="@layout/main_include_instructions_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <!-- main content here -->
+
+    <!-- input minimum -->
+    <include
+        android:id="@+id/min_input_section"
+        layout="@layout/main_include_min_input_section"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/instructions_bar_file"
+        />
+
+
+    <!-- input maximum -->
+    <include
+        android:id="@+id/max_input_section"
+        layout="@layout/main_include_max_input_section"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/min_input_section"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
