--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="default_activity_margin">8dp</dimen>
+    <dimen name="border_width">4dp</dimen>
+    <dimen name="minInputWidth">30dp</dimen>
+    <dimen name="small_padding">8dp</dimen>
 </resources>
