--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,8 +27,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructions_bar_file"
-        />
+        app:layout_constraintTop_toBottomOf="@id/instructions_bar_file" />
 
 
     <!-- input maximum -->
@@ -39,8 +38,22 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/min_input_section"
-        />
+        app:layout_constraintTop_toBottomOf="@id/min_input_section" />
+
+
+    <!-- output -->
+    <TextView
+        android:id="@+id/output"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_margin"
+        android:background="@drawable/border"
+        android:gravity="center"
+        android:text="@string/starting_output"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/max_input_section" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
