--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="@dimen/large_margin"
         android:background="@drawable/border"
         android:gravity="center"
+        android:padding="@dimen/small_padding"
         android:text="@string/starting_output"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
         app:layout_constraintEnd_toEndOf="parent"
