--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructions_bar_file" />
+        app:layout_constraintTop_toBottomOf="@+id/instructions_bar_file" />
 
 
     <!-- input maximum -->
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/min_input_section" />
+        app:layout_constraintTop_toBottomOf="@+id/min_input_section" />
 
 
     <!-- output -->
@@ -48,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_margin"
         android:background="@drawable/border"
+        android:freezesText="true"
         android:gravity="center"
         android:padding="@dimen/small_padding"
         android:text="@string/starting_output"
